# qmlkit

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: adoption_plan.md  launch.md
qmlkit/: __init__.py
qmlkit/benchmarks/: __init__.py  datasets.py  runner.py
qmlkit/core/: __init__.py  backend.py  hybrid.py  kernel.py  simulator.py
qmlkit/examples/: __init__.py  hybrid_nn.py  kernel_svm.py  pennylane_backend.py  qiskit_backend.py
qmlkit/integrations/: sklearn.py  torch.py
qmlkit/tests/: __init__.py  test_hybrid.py  test_kernel.py  test_public_api.py
