[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmlkit"
version = "0.1.0"
description = "Quantum-inspired and hybrid ML tools for classical Python workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "qmlkit contributors" }
]
keywords = ["machine-learning", "quantum-inspired", "pytorch", "scikit-learn"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
]

[project.urls]
Documentation = "https://github.com/cdznho/qmlkit#readme"
Issues = "https://github.com/cdznho/qmlkit/issues"
Source = "https://github.com/cdznho/qmlkit"

[project.optional-dependencies]
sklearn = ["scikit-learn>=1.2"]
torch = ["torch>=2.0"]
bench = ["scikit-learn>=1.2", "torch>=2.0"]
dev = [
  "build>=1.0",
  "mypy>=1.8",
  "pytest>=7.0",
  "ruff>=0.4",
  "scikit-learn>=1.2",
  "torch>=2.0",
]

[tool.setuptools.packages.find]
include = ["qmlkit*"]

[tool.pytest.ini_options]
testpaths = ["qmlkit/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B905"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
